# quicat

./: .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml  on-release-main.yml
docs/: conf.md  contributing.md  index.md  installation.md  simulator_conf.yaml
docs/api/: api.md  plotting.md  read.md  tools.md
docs/tutorials/: quickstart.ipynb
docs/usage/: conf.yaml  extract.md  simulate.md  usage.md
src/quicat/: __init__.py
src/quicat/cli/: app.py
src/quicat/cli/extract/: __init__.py  barcodes_processor.py  extractor.py  pattern_matching.py  reads_processor_bam.py  reads_processor_bam_conf.py  reads_processor_fastq.py  reads_utils.py  sequences_collapser.py
src/quicat/cli/simulation/: __init__.py  fastq_writer.py  simulate_barcodes_bulk_dna.py  simulate_clones_sc.py  simulator.py  simulator_utils.py
src/quicat/cli/utils/: __init__.py  validate_inputs.py  validate_reference.py
src/quicat/plotting/: __init__.py  _barplot.py  _boxplot.py  _stacked_barplot.py
src/quicat/read/: __init__.py  read_extract_output.py
src/quicat/tools/: __init__.py  assign_clones.py
tests/cli/extract/: test_pattern_matching.py  test_reads_processor_fastq.py  test_sequence_collapser.py  test_validate_inputs.py  test_validate_reference.py
tests/cli/simulation/: test_simulate_bulk.py  test_simulate_sc.py
